--- a/chat-poc/frontend/package.json
+++ b/chat-poc/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat-poc",
-  "version": "0.0.0",
+  "name": "chat-poc-frontend",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
